--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-admiral-s-walk_69565
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69565-h/images/cover.jpg
 creator:
   author:
     agent_name: Merwin, Sam
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/33758
     wikipedia: https://en.wikipedia.org/wiki/Sam_Merwin,_Jr.
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69565#The-admiral-s-walk
 gutenberg_issued: '2022-12-17'
 identifiers:
   gutenberg: '69565'
